<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Credit card stats</string>
    
    <!-- ListActivity -->
    <string name="list_activity_noitems">No items in this list</string>
    
    <!-- CardsList -->
    <string name="read_sms_dialog_title">Reading SMS</string>
    <string name="read_sms_dialog_message">Searching for SMS notifications</string>
    <string name="cards_list_title">Your cards</string>
    <string name="card_item_total">Total:</string>
    <string name="card_item_month">Month:</string>
    <string name="card_item_today">Today:</string>
    <string name="card_item_available">Available:</string>
    <string name="card_item_menu_title">Choose year</string>
    
    <string name="reading_stats_dialog_title">Reading statistic</string>
    
    <!-- Current month stats -->
    <string name="current_month_stats_dialog_message">Reading statistic for month</string>
    <string name="current_month_stats_title">%s: current month</string>
    
    <!-- Month stats activity-->
    <string name="month_stats_dialog_message">Reading statistic for month</string>
    <string name="month_stats_title" formatted="false">%s: %d, %s</string>
    
    <!-- Year stats activity -->
    <string name="year_stats_dialog_message">Reading statistic for year</string>
    <string name="year_stats_title" formatted="false">%s: %d stats</string>
    <string name="year_stats_nomonth_toast">No stats for this month</string>
    
    <string-array name="month_names">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    
    <!-- PreferencesActivity -->
    <string name="prefs_category_exchange_rates">Exchange rates</string>
    <string name="prefs_exchange_rates_usd">USD</string>
    <string name="prefs_exchange_rates_eur">EUR</string>
    <string name="prefs_store_month_title">Daily stats</string>
    <string name="prefs_store_month_summary">Store stats for days only in current month</string>
    <string name="prefs_category_statistic">Statistic</string>
    
    <!-- Main menu -->
    <string name="menu_main_prefs">Preferences</string>
    <string name="menu_cards_reread">Reread SMS</string>
    <string name="menu_cards_delete">Delete stats</string>
    
    <!-- Common -->
    <string name="total">Total:</string>

</resources>