<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/prefs_category_exchange_rates"
        android:key="exchange_rates">
        <EditTextPreference
            android:key="exchange_rates_usd"
            android:title="@string/prefs_exchange_rates_usd"
            android:defaultValue="30.0"
            android:numeric="integer|decimal"
            />
        <EditTextPreference
            android:key="exchange_rates_eur"
            android:title="@string/prefs_exchange_rates_eur"
            android:defaultValue="39.0"
            android:numeric="integer|decimal"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prefs_category_statistic"
        android:key="statistic">
        <CheckBoxPreference
            android:key="store_month"
            android:title="@string/prefs_store_month_title"
            android:summary="@string/prefs_store_month_summary"
            android:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>