<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1,2"
    style="@style/CardListItem">
    <TableRow>
        <TextView
	        android:id="@+id/card_item_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/CardName"/>
    </TableRow>
    <TableRow>
        <TextView
	        android:text="@string/card_item_total"
	        style="@style/CardInfo"/>
        <TextView
            android:id="@+id/card_item_total_in"
            style="@style/CardPlus"/>
	    <TextView
	        android:id="@+id/card_item_total_out"
	        style="@style/CardMinus"/>
    </TableRow>
    <TableRow>
        <TextView
	        android:text="@string/card_item_month"
	        style="@style/CardInfo"/>
        <TextView
            android:id="@+id/card_item_month_in"
            style="@style/CardPlus"/>
	    <TextView
	        android:id="@+id/card_item_month_out"
	        style="@style/CardMinus"/>
    </TableRow>
    <TableRow>
        <TextView
	        android:text="@string/card_item_today"
	        style="@style/CardInfo"/>
        <TextView
            android:id="@+id/card_item_today_in"
            style="@style/CardPlus"/>
	    <TextView
	        android:id="@+id/card_item_today_out"
	        style="@style/CardMinus"/>
    </TableRow>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="2dp"
        android:background="#666"/>
    <TableRow>
        <TextView
	        android:text="@string/card_item_available"
	        style="@style/CardAvailableText"/>
	    <TextView
	        android:id="@+id/card_item_available"
	        style="@style/CardAvailableNumber"/>
    </TableRow>
</TableLayout>